<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/bluetooth"
        android:icon="@drawable/ic_action_name"
        android:title="@string/bluetooth_label"/>
    <item
        android:id="@+id/toggle"
        android:checkable="true"
        android:icon="@drawable/ic_action_name"
        android:title="@string/togglebutton"/>
    <item
        android:id="@+id/resetLine"
        android:icon="@drawable/ic_action_name"
        android:title="@string/resetLine"/>
    <item
        android:id="@+id/dc_bluetooth"
        android:icon="@drawable/ic_action_name"
        android:title="@string/dc_bluetooth"/>
    <item
        android:id="@+id/restart"
        android:icon="@drawable/ic_action_name"
        android:title="@string/restart"/>
    <item
        android:id="@+id/endable_parkingslot"
        android:icon="@drawable/ic_action_name"
        android:title="@string/endable_parkingslot"/>
    <item
        android:id="@+id/testmenu"
        android:icon="@drawable/ic_action_name"
        android:title="@string/testButton"/>

    <group
        android:id="@+id/group1"
        android:enabled="true"
        android:menuCategory="container"
        android:visible="false" >
        <item
            android:id="@+id/pause"
            android:icon="@drawable/ic_action_name"
            android:title="@string/pause"/>
    </group>

</menu>